Second subdivision modifier does not ignore crease anymore #63283

Closed
opened 2019-04-04 20:42:54 +02:00 by Lino Thomas · 9 comments

System Information
Operating system: Win 7 64bit
Graphics card: GTX970

Blender Version
Broken: 2.80 (all versions, reported with 98f00a3eb5)
Worked: 2.79 (stable release)

Short description of error
When stacking two subdivision surface modifiers on top of each other, the crease information will be used in both modifiers, creating sharp corners.

The expected behaviour from blender 2.79 is that the second subdivision modifier ignores the crease and therefore smooth out the geometry. A more natural look is the result.
This is heavily used in hard surface objects, where subdivision is used.

I dont know if this is intended behaviour, but if it is, i would request a "ignore crease" checkbox in the modifier panel to be able to achieve the desired behaviour.

crease_bug_01.PNG

Exact steps for others to reproduce the error

  • Add Default cube
  • Add a crease to an edge
  • Add two subdivision modifiers (first one level 3 and second one level 3)
**System Information** Operating system: Win 7 64bit Graphics card: GTX970 **Blender Version** Broken: 2.80 (all versions, reported with 98f00a3eb526) Worked: 2.79 (stable release) **Short description of error** When stacking two subdivision surface modifiers on top of each other, the crease information will be used in both modifiers, creating sharp corners. The expected behaviour from blender 2.79 is that the second subdivision modifier ignores the crease and therefore smooth out the geometry. A more natural look is the result. This is heavily used in hard surface objects, where subdivision is used. I dont know if this is intended behaviour, but if it is, i would request a "ignore crease" checkbox in the modifier panel to be able to achieve the desired behaviour. ![crease_bug_01.PNG](https://archive.blender.org/developer/F6912226/crease_bug_01.PNG) **Exact steps for others to reproduce the error** - Add Default cube - Add a crease to an edge - Add two subdivision modifiers (first one level 3 and second one level 3)
Author

Added subscriber: @LinoThomas

Added subscriber: @LinoThomas

Added subscribers: @Sergey, @WilliamReynish

Added subscribers: @Sergey, @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-04-04 20:49:52 +02:00

I think this is not a bug, just because we use OpenSuvdiv, which handles creases in a slightly different way.

@Sergey you can confirm or deny

I think this is not a bug, just because we use OpenSuvdiv, which handles creases in a slightly different way. @Sergey you can confirm or deny

Added subscriber: @brecht

Added subscriber: @brecht

Not related to OpenSubdiv probably.

Probably the subsurf modifier used to set creases to 0 after applying, that behavior could be restored.

Not related to OpenSubdiv probably. Probably the subsurf modifier used to set creases to 0 after applying, that behavior could be restored.

In that case, setting as confirmed.

In that case, setting as confirmed.

OTOH, the old behavior does seem rather arbitrary. There could be loads of instances where you would want more than the first Subdiv modifier to respect the creasing, or even where you would want to opposite.

Like, if you use the first Subdiv for a basic shape but later one for higher detail where creasing is more visible.

Only solution I can think of for that, is for there to be an option inside each Subdiv modifier to use creasing or not.

@brecht @Sergey what do you think?

OTOH, the old behavior does seem rather arbitrary. There could be loads of instances where you *would* want more than the first Subdiv modifier to respect the creasing, or even where you would want to opposite. Like, if you use the first Subdiv for a basic shape but later one for higher detail where creasing is more visible. Only solution I can think of for that, is for there to be an option inside each Subdiv modifier to use creasing or not. @brecht @Sergey what do you think?

This issue was referenced by d220a87b47

This issue was referenced by d220a87b47e317996e58cf5c597c872bc8970925

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63283
No description provided.